update Readme file and handle response
