# logs/swagger_output.json
@@ -541,6 +541,10 @@
                     "type": "string",
                     "example": "Uchiha Itachi"
                   },
+                  "username": {
+                    "type": "string",
+                    "example": "UchihaItachi"
+                  },
                   "email": {
                     "type": "string",
                     "example": "itachi@uchiha.com"
